[package]
name = "themer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["../themer"]

[workspace.dependencies]
egui_extras = "0.28.1"
eframe = "0.28.1"

[dependencies]
clone = "0.1.2"
eframe = { workspace = true, features = ["default", "__screenshot"] }
egui_extras = {workspace = true, features = ["default", "image", "all_loaders"]}
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
hex = "0.4.3"
rfd = "0.15.0"
serde = "1.0.210"
serde_json = "1.0.128"
image = { version = "0.25.4" }
colors-transform = "0.2.11"
colored = "2.1.0"

